--- a/app/src/main/res/layout/fragment_add_task.xml
+++ b/app/src/main/res/layout/fragment_add_task.xml
@@ -16,7 +16,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/addTask_entry_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:selectAllOnFocus="true" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -24,7 +25,6 @@
         android:id="@+id/addTask_button_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/common_add"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/addTask_entry_layout" />
