--- a/app/src/main/res/menu/app_menu.xml
+++ b/app/src/main/res/menu/app_menu.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/menu_item_add"
-        android:title="@string/menu_title_add"
+        android:title="@string/menu_item_title_add"
+        android:icon="@drawable/ic_add_24"
+        app:showAsAction="always" />
+    <item android:id="@+id/menu_item_delete"
+        android:title="@string/menu_item_title_delete"
+        android:icon="@drawable/ic_delete_24"
         app:showAsAction="ifRoom" />
 </menu>
