--- a/app/src/main/res/navigation/app_navigation_graph.xml
+++ b/app/src/main/res/navigation/app_navigation_graph.xml
@@ -80,6 +80,15 @@
                 android:name="task"
                 app:argType="integer" />
         </action>
+        <action
+            android:id="@+id/action_tabContentFragment_to_deleteCategoriesFragment"
+            app:destination="@id/deleteCategoriesFragment" />
     </fragment>
+
+    <fragment
+        android:id="@+id/deleteCategoriesFragment"
+        android:name="com.playground.navigationwithtabs.ui.DeleteCategoriesFragment"
+        android:label="fragment_delete_categories"
+        tools:layout="@layout/fragment_delete_categories" />
 
 </navigation>
