Add soft keyboard action key

--- a/app/src/main/res/layout/fragment_add_tab.xml
+++ b/app/src/main/res/layout/fragment_add_tab.xml
@@ -18,7 +18,10 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/addTab_entry_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:imeActionLabel="Add"
+            android:inputType="text"
+            android:imeOptions="actionDone" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
