--- a/app/src/main/res/layout/fragment_tab_content.xml
+++ b/app/src/main/res/layout/fragment_tab_content.xml
@@ -27,6 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/padding_standard"
+        android:contentDescription="@string/tasks_title_add"
         app:srcCompat="@android:drawable/ic_input_add"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
