--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -8,6 +8,7 @@
     android:layout_marginBottom="8dp">
 
     <TextView
+        style="@style/TextAppearance.MaterialComponents.Subtitle1.ListItem"
         android:id="@+id/item_name"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -16,9 +17,20 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
+        android:id="@+id/item_complete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/padding_item_standard"
+        android:src="@drawable/ic_check_24"
+        android:contentDescription="@string/tasks_action_complete"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/item_delete" />
+
+    <ImageView
         android:id="@+id/item_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/padding_item_standard"
         android:src="@drawable/ic_delete_24"
         android:contentDescription="@string/common_delete"
         app:layout_constraintTop_toTopOf="parent"
