--- a/app/src/main/res/layout/fragment_view_pager.xml
+++ b/app/src/main/res/layout/fragment_view_pager.xml
@@ -34,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
-            app:tabTextColor="@color/white"
+            app:tabTextColor="?attr/colorOnPrimary"
             app:tabMode="scrollable" />
 
     </com.google.android.material.appbar.AppBarLayout>
