Update action colors

--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -23,6 +23,7 @@
         android:layout_marginEnd="@dimen/padding_item_standard"
         android:src="@drawable/ic_check_24"
         android:contentDescription="@string/tasks_action_complete"
+        app:tint="@color/grey_light"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="@id/item_delete" />
 
@@ -33,6 +34,7 @@
         android:layout_marginStart="@dimen/padding_item_standard"
         android:src="@drawable/ic_delete_24"
         android:contentDescription="@string/common_delete"
+        app:tint="@color/grey_light"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
