Require valid entry

--- a/app/src/main/res/layout/fragment_add_tab.xml
+++ b/app/src/main/res/layout/fragment_add_tab.xml
@@ -47,6 +47,8 @@
             android:id="@+id/addTab_entry_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:selectAllOnFocus="true"
+            android:maxLength="100"
             android:imeActionLabel="Add"
             android:inputType="text"
             android:imeOptions="actionDone" />
