--- a/app/src/main/res/layout/fragment_add_task.xml
+++ b/app/src/main/res/layout/fragment_add_task.xml
@@ -41,6 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:selectAllOnFocus="true"
+            android:maxLength="100"
             android:imeActionLabel="Add"
             android:inputType="text"
             android:imeOptions="actionDone" />
