NWT-9 Create Deleted items screen

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="padding_standard">16dp</dimen>
     <dimen name="padding_item_standard">8dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
