--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content">
 
     <TextView
+        style="@style/TextAppearance.MaterialComponents.Subtitle1.ListItem"
         android:id="@+id/category_name"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
