--- a/app/src/main/res/layout/fragment_view_pager.xml
+++ b/app/src/main/res/layout/fragment_view_pager.xml
@@ -41,6 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?attr/colorPrimary"
+                app:tabIndicatorColor="?attr/tabIndicatorColor"
                 app:tabTextColor="?attr/colorOnPrimary"
                 app:tabMode="scrollable" />
 
