--- a/app/src/main/res/layout/fragment_delete_categories.xml
+++ b/app/src/main/res/layout/fragment_delete_categories.xml
@@ -26,7 +26,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/list_title_delete"
+                android:text="@string/list_title_edit"
                 android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
 
         </androidx.appcompat.widget.Toolbar>
