--- a/app/src/main/res/menu/app_menu.xml
+++ b/app/src/main/res/menu/app_menu.xml
@@ -5,9 +5,10 @@
         android:title="@string/menu_item_title_add"
         android:icon="@drawable/ic_add_24"
         app:showAsAction="always" />
-    <item android:id="@+id/menu_item_delete"
+    <item
+        android:id="@+id/menu_item_edit"
         android:title="@string/menu_item_title_delete"
-        android:icon="@drawable/ic_delete_24"
+        android:icon="@drawable/ic_edit_24"
         app:showAsAction="ifRoom" />
     <item android:id="@+id/menu_item_share"
         android:title="@string/menu_item_title_share"
