NWT-37 Refactor to support renaming lists

--- a/app/src/main/res/navigation/app_navigation_graph.xml
+++ b/app/src/main/res/navigation/app_navigation_graph.xml
@@ -1,54 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_navigation"
     app:startDestination="@id/viewPagerFragment">
 
-    <fragment
-        android:id="@+id/viewPagerFragment"
-        android:name="com.meadowlandapps.simplelists.ui.ViewPagerFragment"
-        android:label="fragment_view_pager"
-        tools:layout="@layout/fragment_view_pager">
-        <action
-            android:id="@+id/action_viewPagerFragment_to_tabContentFragment"
-            app:destination="@id/tabContentFragment" />
-        <action
-            android:id="@+id/action_tabContentFragment_to_addTaskFragment"
-            app:destination="@id/addTaskFragment">
-            <argument
-                android:name="type"
-                app:argType="string" />
-        </action>
-        <action
-            android:id="@+id/action_tabContentFragment_to_editTaskFragment"
-            app:destination="@id/addTaskFragment">
-            <argument
-                android:name="task"
-                app:argType="integer" />
-        </action>
-        <action
-            android:id="@+id/action_viewPagerFragment_to_deletedItemsFragment"
-            app:destination="@id/deletedItemsFragment"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim" />
-        <action
-            android:id="@+id/action_viewPagerFragment_to_shareDialogFragment"
-            app:destination="@id/share_dialog_fragment"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim">
-            <argument
-                android:name="category"
-                app:argType="string" />
-        </action>
-    </fragment>
+    <dialog
+        android:id="@+id/share_dialog_fragment"
+        android:name="com.meadowlandapps.simplelists.ui.ShareDialogFragment">
+        <argument
+            android:name="category"
+            app:argType="integer" />
+    </dialog>
 
     <fragment
         android:id="@+id/addTabFragment"
         android:name="com.meadowlandapps.simplelists.ui.AddTabFragment"
         android:label="fragment_add_tab"
-        tools:layout="@layout/fragment_add_tab" />
+        tools:layout="@layout/fragment_add_tab">
+        <argument
+            android:name="category"
+            app:argType="integer" />
+    </fragment>
 
     <fragment
         android:id="@+id/addTaskFragment"
@@ -57,7 +30,7 @@
         tools:layout="@layout/fragment_add_task">
         <argument
             android:name="type"
-            app:argType="string" />
+            app:argType="integer" />
         <argument
             android:name="task"
             app:argType="integer" />
@@ -73,7 +46,7 @@
             app:destination="@id/addTaskFragment">
             <argument
                 android:name="type"
-                app:argType="string" />
+                app:argType="integer" />
         </action>
         <action
             android:id="@+id/action_tabContentFragment_to_editTaskFragment"
@@ -93,18 +66,18 @@
         android:label="fragment_delete_categories"
         tools:layout="@layout/fragment_delete_categories">
         <action
-            android:id="@+id/action_deleteCategoriesFragment_to_deleteConfirmFragment"
-            app:destination="@id/deleteConfirmDialog">
-            <argument
-                android:name="categories"
-                app:argType="string[]" />
-        </action>
-        <action
             android:id="@+id/action_editCategoriesFragment_to_addTabFragment"
             app:destination="@id/addTabFragment">
             <argument
                 android:name="category"
                 app:argType="integer" />
+        </action>
+        <action
+            android:id="@+id/action_deleteCategoriesFragment_to_deleteConfirmFragment"
+            app:destination="@id/deleteConfirmDialog">
+            <argument
+                android:name="categories"
+                app:argType="string[]" />
         </action>
     </fragment>
 
@@ -114,13 +87,50 @@
         android:label="DeletedItemsFragment"
         tools:layout="@layout/fragment_deleted_items_list" />
 
-    <dialog
-        android:id="@+id/share_dialog_fragment"
-        android:name="com.meadowlandapps.simplelists.ui.ShareDialogFragment">
-        <argument
-            android:name="category"
-            app:argType="string" />
-    </dialog>
+    <fragment
+        android:id="@+id/viewPagerFragment"
+        android:name="com.meadowlandapps.simplelists.ui.ViewPagerFragment"
+        android:label="fragment_view_pager"
+        tools:layout="@layout/fragment_view_pager">
+        <action
+            android:id="@+id/action_viewPagerFragment_to_tabContentFragment"
+            app:destination="@id/tabContentFragment" />
+        <action
+            android:id="@+id/action_tabContentFragment_to_addTaskFragment"
+            app:destination="@id/addTaskFragment">
+            <argument
+                android:name="type"
+                app:argType="integer" />
+        </action>
+        <action
+            android:id="@+id/action_tabContentFragment_to_editTaskFragment"
+            app:destination="@id/addTaskFragment">
+            <argument
+                android:name="task"
+                app:argType="integer" />
+        </action>
+        <action
+            android:id="@+id/action_viewPagerFragment_to_addTabFragment"
+            app:destination="@id/addTabFragment">
+            <argument
+                android:name="category"
+                app:argType="integer" />
+        </action>
+        <action
+            android:id="@+id/action_viewPagerFragment_to_deletedItemsFragment"
+            app:destination="@id/deletedItemsFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim" />
+        <action
+            android:id="@+id/action_viewPagerFragment_to_shareDialogFragment"
+            app:destination="@id/share_dialog_fragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim">
+            <argument
+                android:name="category"
+                app:argType="integer" />
+        </action>
+    </fragment>
 
     <dialog
         android:id="@+id/deleteConfirmDialog"
